# haskell-programming

./: .gitignore  stack.yaml
01-all-you-need-is-lambda/: notes.md
02-hello-haskell/: learn.hs  notes.md
03-strings/: notes.md  print1.hs  print2.hs
04-basic-datatypes/: mood.hs  notes.md
05-types/: notes.md
06-typeclasses/: notes.md
07-more-functional-patterns/: arith4.hs  exercise-1.hs  exercise-2.hs  exercise-3.hs  exercise-artful-dodgy.hs  exercise-case-practice.hs  exercise-lets-write-code.hs  notes.md  registeredUser2.hs
08-recursion/: WordNumber.hs  applyTimes.hs  exercise-eval-applyTimes.hs  exercise-mcarthy91.hs  exercise-recursion.hs
09-lists/: Cipher.hs  PoemLines.hs  exercise-data-char.hs  exercise-enumFromTo.hs  exercise-standard-functions.hs  exercise-thy-fearful-symmetry.hs  exercise-zipping.hs
10-folding-lists/: exercise-database-processing.hs  exercise-rewriting-functions-using-folds.hs  exercise-scans.hs  exercise-warm-up-and-review.hs  notes.md
11-algebraic-datatypes/: Vehicules.hs  exercise-huttons-razor.hs  exercise-phone.hs  notes.md
12-signaling-adversity/: exercise-its-only-natural.hs  exercise-small-library-for-either.hs  exercise-small-library-for-maybe.hs  exercise-string-processing.hs  exercise-validate-the-word.hs  notes.md
14-testing/addition/: Addition.hs  addition.cabal
14-testing/exercise-multiply-hspec/: Multiply.hs  exercise-multiply-hspec.cabal
14-testing/exercises-testing/: exercises-testing.cabal
14-testing/exercises-testing/src/: WordNumber.hs
14-testing/exercises-testing/test/: QuickCheckTest.hs  WordNumberTest.hs
14-testing/kicking-around-quickcheck/: LICENSE  kicking-around-quickcheck.cabal
14-testing/kicking-around-quickcheck/src/: Main.hs
14-testing/morse/: morse.cabal
14-testing/morse/src/: Main.hs  Morse.hs
14-testing/morse/tests/: tests.hs
15-monoid-semigroup/: README.md  chapter14.cabal  chapter15.cabal  package.yaml
15-monoid-semigroup/src/: MonoidLaws.hs  Optional.hs  SemigroupLaws.hs
15-monoid-semigroup/test/: execise-maybe-another-monoid.hs  exercise-optional-monoid.hs  exercise-semigroup-monoid.hs  exercise-semigroup.hs
16-functor/: README.md  chapter16.cabal  package.yaml
16-functor/src/: FunctorLaws.hs  ReplaceExperiment.hs
16-functor/test/: const.hs  exercise-be-kind.md  exercise-either.hs  exercise-heavy-lifting.hs  exercise-instances-of-func.hs  exercise-possibly.hs  exercises-chapter.hs  natural-transformations.hs  no-identity-law.hs  wrap.hs
17-applicative/: README.md  chapter17.cabal  package.yaml
17-applicative/src/: ApplicativeLaws.hs
17-applicative/test/: exercise-constant.hs  exercise-fixer-upper.hs  exercise-identity.hs  exercise-list-applicative.hs  exercise-lookups.hs  exercises-chapter.hs  using-checkers.hs  using-maybe-applicative.hs
18-monad/: README.md  package.yaml  stack.yaml
18-monad/src/: Kleisli.hs
18-monad/test/: bind-from-join.hs  exercise-either.hs  exercises-chapter.hs
20-foldable/: README.md  package.yaml
20-foldable/test/: exercise-library-functions.hs  exercises-chapter.hs
21-traversable/: README.md  package.yaml
21-traversable/src/: HttpStuff.hs  Morse.hs
21-traversable/test/: exercises-chapter.hs
22-reader/: README.md  package.yaml
22-reader/src/: Beeps.hs
22-reader/test/: exercise-ask.hs  exercise-reader-monad.hs  exercise-reading-comprehension.hs  exercise-warming-up.hs  exercises-chapter.hs
23-state/: package.yaml
23-state/src/: RandomExample.hs  RandomExample2.hs
23-state/test/: exercise-roll-your-own.hs  exercise-write-state-for-yourself.hs
my-own/type-level-programming/: README.md  package.yaml  type-level-programming.cabal
