name:                chapter17
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ApplicativeLaws
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite exercise-constant
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             exercise-constant.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite exercise-fixer-upper
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             exercise-fixer-upper.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite exercise-identity
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             exercise-identity.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite exercise-list-applicative
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             exercise-list-applicative.hs
  build-depends:       base
                     , QuickCheck
                     , checkers
                     , hspec
                     , hspec-checkers
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite exercise-lookups
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             exercise-lookups.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite exercises-chapter
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             exercises-chapter.hs
  build-depends:       base
                     , QuickCheck
                     , checkers
                     , hspec
                     , hspec-checkers
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite using-checkers
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             using-checkers.hs
  build-depends:       base
                     , QuickCheck
                     , checkers
                     , hspec
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite using-maybe-applicative
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             using-maybe-applicative.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
                     , chapter17
  ghc-options:         -Wall
  default-language:    Haskell2010
