name:                exercises-testing
version:             0.1.0.0
license-file:        LICENSE
author:              Carlos Valiente
maintainer:          carlos@pepelabs.net
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     WordNumber
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite word-number
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             WordNumberTest.hs
  build-depends:       base
                     , hspec
                     , exercises-testing
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite using-quick-check
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             QuickCheckTest.hs
  build-depends:       base
                     , QuickCheck
                     , hspec
  ghc-options:         -Wall
  default-language:    Haskell2010
