name:                kicking-around-quickcheck
version:             0.1.0.0
license-file:        LICENSE
author:              Carlos Valiente
maintainer:          carlos@pepelabs.net
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable kicking-around-quickcheck
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010
