name:                morse
version:             0.1.0.0
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Morse
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , containers
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

executable morse
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , morse
                     , QuickCheck
                     , containers
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , morse
                     , QuickCheck
                     , containers
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010
